--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,29 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
+    <header>
+      <div class="if-load">
+        <span class="loader"></span>
+      </div>
+      <div class="form-list">
+        <form class="search-form" id="search-form">
+          <input class="form-input"
+            type="text"
+            name="searchQuery"
+            autocomplete="off"
+            placeholder="Search images..."
+          />
+          <button type="submit" class="search-btn">Search</button>
+        </form>
+      </div>
+    </header>
+    <div class="gallery">
+      <!-- Картки зображень -->
+    
+    </div>
+    <button type="button" class="load-more">Load more</button>
+
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <!-- <include src="./partials/example.html"></include> -->
   </body>
 </html>
