--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./sass/index.scss" />
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <header>
-      <div class="if-load">
+    <header class="header">
+      <!-- <div class="if-load">
         <span class="loader"></span>
-      </div>
+      </div> -->
       <div class="form-list">
         <form class="search-form" id="search-form">
           <input class="form-input"
@@ -28,7 +32,7 @@
       <!-- Картки зображень -->
     
     </div>
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more load-more-btn">Load more</button>
 
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
