--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
       <!-- Картки зображень -->
     
     </div>
-    <button type="button" class="load-more load-more-btn">Load more</button>
+    <button type="button" class="load-more load-more-btn load-more-hidden">Load more</button>
 
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
